--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="file:///Users/Julia/Documents/GoTopTen/css/indexNEW.css">
+    <link rel="stylesheet" type="text/css" href="file:///Users/Julia/Documents/GoTopTen/GTT Rep/css/indexNEW.css">
   </head>
   <body>
 	<div class="top">
