--- a/index.html
+++ b/index.html
@@ -15,12 +15,10 @@
 		</h3>
 	</div>
 	<div class = "main">
-  	<h4>
-  	  	What's Your Top Ten?  
-  	</h4>
-	<p>
-		Email test
+  	<p>
+  	  	Create Your Top Ten    
 	</p>
+		
 	</div>
   </body>
 </html>  
